# MiniGraph

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  clean.sh  dependencies.sh  load.py  main.py  note.sh  preprocessing.py  websk_2_nor.csv  websk_3_nor.csv
apps/: BFS.cpp  PageRank.cpp  SSSP.cpp  WCC.cpp  main.cpp
apps/cpp/: bfs.cpp  bfs_gc.cpp  bfs_vc.cpp  cc_pram.cpp  coloring.cpp  mst.cpp  pagerank.cpp  pagerank_gc.cpp  pr_gc.cpp  pr_gc_frontier.cpp  pr_vc.cpp  random_walk_vc.cpp  random_walk_vc_gc.cpp  random_walk_vc_stream.cpp  simulation_gc.cpp  simulation_vc.cpp  sssp.cpp  sssp_gc.cpp  sssp_gc_frontier.cpp  sssp_vc.cpp  sssp_vc_stream.cpp  subiso.cpp  subiso_vf2.cpp  test_linkedlist_csr.cpp  wcc.cpp  wcc_csr.cpp  wcc_gc.cpp  wcc_gc_frontier.cpp  wcc_vc.cpp  wcc_vc_batch.cpp  wcc_vc_stream.cpp
apps/cpp/backup/: bfs.cpp  pagerank.cpp  sssp.cpp  sssp_gc.cpp  wcc.cpp
apps/cpp/backups/: bfs_vc.cpp  pr_gc_frontier.cpp  random_walk_vc_gc.cpp  simulation_gc.cpp  wcc_gc_frontier.cpp
apps/cpp/bak/: bfs_gc.cpp  sssp_gc.cpp  wcc_csr.cpp
apps/cpp/tmp/: bfs_gc.cpp  pagerank.cpp  pagerank_gc.cpp  wcc.cpp  wcc_csr.cpp
apps/cu/: cuda_bfs.cu  test_cuda.cu
apps/keep/: bfs_vc.cpp  pr_gc.cpp  pr_vc.cpp  simulation_gc.cpp  simulation_vc.cpp  sssp_vc.cpp
cmake/: FindJemalloc.cmake  FindNCLL.cmake  Findfolly.cmake  Findyaml-cpp.cmake
common/: table.h
common/data_structures/: rules.h  table.h
common/utility/: logging.cpp  logging.h
doc/: CompactedGraph.md  GetStatistics.md  GraphGen.md
examples/system_components/state_machine/: test_state_machine.cc  test_state_machine.cpp  test_state_machine.h
examples/system_components/thread_pool/: run_thread_pool.cpp
inputs/: clear.sh  roadNet-CA.statistic  watch_io.sh  watch_pid.sh  watch_pid_io.sh
inputs/edge_graph_csv/: roadNet-CA.statistic  test.csv  test2.csv  test_reduced.csv  web-sk-2005-all_reduced_mini.statistic  web-sk-2005-all_reduced_mini.txt
inputs/log/: io.log2  log.log-22222  log.log.rmat  log.log.rmat22  log.log.wcc.twitter  log.log2
inputs/pattern/: clique.csv  p1_label.csv  path.csv  star.csv  triangle.csv
inputs/training_data/: READEME.md  clueweb_8  twitter_1  twitter_4  twitter_8  websk_2  websk_4  websk_8
inputs/training_data/clueweb/: clueweb_8_1  clueweb_8_2
inputs/training_data/websk_new/: websk_8_0  websk_8_1  websk_8_2  websk_8_3  websk_8_4
inputs/training_data/websk_old/: websk_2  websk_8
libminigraph/: CMakeLists.txt
libminigraph/components/: load_component.h
libminigraph/graphs/: graph.h  immutable_csr.h
libminigraph/portability/: sys_data_structure.h
libminigraph/tests/: sample_test.cpp
libminigraph/utility/: state_machine.h  thread_pool.cpp  thread_pool.h
libminigraph/utility/io/: csr_io_adapter.h  data_mngr.h  io_adapter_base.h
libminigraph/utility/paritioner/: edge_cut_partitioner.h
libutil/: thread.h
minigraph/: CMakeLists.txt  minigraph_sys.cpp  minigraph_sys.h  scheduler.h  system.cpp  system.h
minigraph/2d_pie/: auto_app_base.h  auto_map.h  auto_pram.h  bimap.h  bitmap.h  edge_map_reduce.h  vertex_map_reduce.h
minigraph/components/: component_base.h  computing_component.cpp  computing_component.h  discharge_component.cpp  discharge_component.h  load_component.cpp  load_component.h
minigraph/executors/: cpu_scheduler.cpp  cpu_scheduler.h  schedulable.h  scheduled_executor.cpp  scheduled_executor.h  scheduler.h  task_processor.h  task_runner.h  throttle.cpp  throttle.h
minigraph/graphs/: edge_list.h  edgelist.h  graph.h  immutable_csr.h  linked_list_mutable_csr.h  relation.h
minigraph/message_manager/: border_vertexes.h  default_message_manager.h  message_manager_base.h  partial_match.h
minigraph/portability/: atomic.h  bitmap.h  sys_data_structure.h  sys_types.h
minigraph/scheduler/: fifo_scheduler.h  hash_scheduler.h  large_first_scheduler.h  learned_scheduler.h  scheduler.h  scheduler_base.h  small_first_scheduler.h  small_small_scheduler.h  subgraph_scheduler_base.h
minigraph/state_machine/: state_machine.cc  state_machine.cpp  state_machine.h
minigraph/tests/: CMakeLists.txt  logging_test.cpp  sample_test.cpp
minigraph/tests/2d_pie/: bfs_test.cpp
minigraph/tests/executors/: cpu_scheduler_test.cpp  executors_integration_test.cpp  scheduled_executor_test.cpp  throttle_test.cpp
minigraph/utility/: atomic.h  bitmap.h  logging.cpp  logging.h  sort.h  state_machine.h  thread_pool.cpp  thread_pool.h  thread_pool_easy.h
minigraph/utility/docs/: logging.md
minigraph/utility/dynamic/: split_merge.h
minigraph/utility/io/: csr_io_adapter.h  data_mngr.h  edge_list_io_adapter.h  edge_list_io_adapter.h.cpp  io_adapter_base.h  relation_io_adapter.h
minigraph/utility/paritioner/: 2DVC_partitioner.h  PartitionerBase.cpp  PartitionerBase.h  edge_cut_partitioner.h  hybrid_cut_partitioner.h  partitioner_base.h  vertex_cut_partitioner.h
test/: test_system.cpp
test/logging/: test_logging.cpp
test/system_components/: test_folly_pc.cpp
test/system_components/file_system/: test_folly_file.cpp
test/system_components/state_machine/: test_state_machine.cpp
test/system_components/thread_pool/: test_folly.cpp  test_folly_thread_pool.cpp  test_thread_pool.cpp
tools/: HelloWorld.java  batch_graph_convert.cpp  compacted_graph.cpp  get_statistic.cpp  get_statistics.cpp  graph_convert.cpp  graph_gen.cpp  graph_partition.cpp  graph_reduce.cpp  graphgen.cpp  preprocess.cpp  types_convert.cpp
tools/python/: batch_replace_sep.py  remove_rol.py  replace_sep.py  sampling.py
